syntax = "proto3";

package pb;

option go_package = "../pb";

message UserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string fullName = 2;
  string email = 3;
}

message UserResponseStream {
  string status = 1;
  UserResponse user = 2;
}

service UserService {
  rpc AddUser (UserRequest) returns (UserResponse);
  rpc AddUserWithResponseStream (UserRequest) returns (stream UserResponseStream);
}
